fix: add requirements :wrench:

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "flappy-bird-env"
-version = "0.1.1"
+version = "0.1.2"
 description = """Flappy Bird as a Farama Gymnasium environment."""
 readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.11"
@@ -17,6 +17,10 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Topic :: Software Development :: Libraries"
 ]
+
+[build-system]
+requires = ["gymnasium == 0.28.1", "numpy == 1.25.0", "pygame == 2.4.0",
+    "setuptools == 65.5.0"]
 
 [project.urls]
 homepage = "https://github.com/robertoschiavone/flappy-bird-env"
